# ai-tools-and-links

./: .env.example  README.md  pyproject.toml  tools_and_links.md
m1-b2/: 1_distillation.py  1_distillation_groq.py
m1_b2/: _2_quantization.py  _3_count_tokens.py  _4_chat_bot_calc.py  _5_routing.py  _6_prompt_caching.py
m1_b3/: _10_0_ollama_structured_outputs_example.py  _10_1_openai_structured_outputs_example.py  _11_ollama_tool_calling_example.py  _12_Modelfile  _13_run_modelfile.MD  _14_modelfile_advanced  _15_ollama_benchmark_example.py  _16_ollama_chatbot_example.py  _17_ollama_code_review_example.py  _1_OLLAMA_INSTALL_COMMANDS.md  _2_OLLAMA_CLI_CHEATSHEET.md  _3_OLLAMA_API_CHAT_EXAMPLE.MD  _4_OLLAMA_OPENAI_COMPAT_CHAT.md  _5_ollama_python_chat_example.py  _6_ollama_python_stream_example.py  _7_openai_client_with_ollama_example.py  _8_switch_local_openai_example.py  _9_requests_ollama_example.py
m1_b4/: _10_prompt_caching_example.py  _11_batch_reviews_example.py  _12_smart_routing_example.py  _13_prompt_optimization_tokens.py  _14_model_selection_pipeline.py  _15_openrouter_single_client_example.py  _1_ollama_ttft_measure.py  _2_ollama_full_benchmark.py  _3_ollama_eval_example.py  _4_ollama_combined_benchmark.py  _5_ollama_temperature_test.py  _6_benchmark_any_model.py  _7_calculate_ai_cost.py  _8_ai_cost_scenarios.py  _9_embedding_cost_example.py  eval_tasks.py
